# synthia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  assistant.py  audio.py  commands.py  config.example.yaml  config.py  indicator.py  install.sh  linuxvoice.desktop  main.py  notifications.py  output.py  pyproject.toml  requirements.txt  run.sh  sounds.py  transcribe.py  tts.py  voice-daemon.py  wakeword.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
claude-hooks/: stop-hook.py  tts.py  voice-input.py
docs/: PRD-GUI.md  neuralguard-policy.example.yaml  security-policy.example.yaml
docs/plans/: 2025-05-05-agent-daily-journal-design.md  2025-05-05-agent-daily-journal-implementation.md  2026-01-21-synthia-dashboard-design.md  2026-01-21-synthia-dashboard-implementation.md  2026-01-24-worktree-dashboard-design.md  2026-01-25-gui-consolidation-design.md  2026-01-25-gui-consolidation-implementation.md  2026-02-24-github-issues-implementation.md  2026-02-24-github-issues-integration-design.md  2026-02-26-knowledge-section-implementation.md  2026-02-26-knowledge-section-redesign.md  2026-02-27-task-reordering-design.md  2026-02-27-task-reordering.md  2026-03-01-copy-file-path.md  2026-04-30-agents-monitor-usage-fix-design.md  2026-04-30-agents-monitor-usage-fix-plan.md  2026-05-01-neuralguard-pivot-spec.md
docs/superpowers/plans/: 2026-05-04-rust-a-grade-refactor.md  2026-05-05-knowledge-editor-shortcuts.md
docs/superpowers/specs/: 2026-05-04-ai-security-noise-reduction-design.md  2026-05-04-rust-a-grade-refactor-design.md  2026-05-05-knowledge-editor-shortcuts-design.md
gui/: overlay.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.css  App.tsx  Overlay.css  Overlay.tsx  overlay-main.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: config.rs  egress.rs  error.rs  lib.rs  main.rs  paths.rs  security.rs  state.rs  yaml_writer.rs
gui/src-tauri/src/commands/: agents.rs  claude_config.rs  clipboard.rs  github.rs  history.rs  hotkeys.rs  inbox.rs  journal.rs  lifecycle.rs  memory.rs  mod.rs  neuralguard.rs  news.rs  notes.rs  overlay.rs  remote.rs  usage.rs  weather.rs  worktrees.rs
gui/src/components/: JournalPanel.tsx
remote/: telegram_bot.py
src/synthia/: __init__.py  assistant.py  audio.py  clipboard_monitor.py  commands.py  config.py  config_manager.py  dashboard.py  dashboard_screens.py  display.py  hotkeys.py  indicator.py  llm_polish.py  main.py  memory.py  memory_tui.py  notifications.py  output.py  sounds.py  tasks_cli.py  transcribe.py  tts.py  voice-daemon.py  wakeword.py  web_search.py  widgets.py  worktrees.py
src/synthia/hooks/: __init__.py  security_gate.py  speak-response.sh  stop-hook.py  tts.py  voice-input.py  voice-to-claude.sh
src/synthia/remote/: __init__.py  inbox.py  send_telegram.py  telegram_bot.py
tests/: conftest.py  test_assistant.py  test_clipboard_monitor.py  test_commands2.py  test_config.py  test_config_manager.py  test_display.py  test_hotkeys.py  test_inbox.py  test_journal.py  test_llm_polish.py  test_memory.py  test_notifications.py  test_output.py  test_sounds.py  test_tasks_cli.py  test_web_search.py  test_worktrees.py
