[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthia"
version = "0.1.0"
description = "AI-powered voice assistant that respects your privacy"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mark Middo", email = "mark@eventflo.io"}
]
keywords = ["voice-assistant", "ai", "speech-recognition", "local-ai", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
    "pynput>=1.7.6",
    "pystray>=0.19.0",
    "requests>=2.31.0",
    "scipy>=1.10.0",
    "sounddevice>=0.4.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
local = [
    "faster-whisper>=0.9.0",
    "piper-tts>=1.2.0",
    "evdev>=1.6.0",
]
cloud = [
    "google-cloud-speech>=2.0",
    "google-cloud-texttospeech>=2.0",
    "anthropic>=0.18.0",
]
remote = ["python-telegram-bot>=20.0"]
search = ["tavily-python>=0.5.0"]
tui = ["textual>=0.47.0"]
all = ["synthia[local,cloud,remote,search,tui]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/markmiddo/synthia"
Repository = "https://github.com/markmiddo/synthia"
Issues = "https://github.com/markmiddo/synthia/issues"

[project.scripts]
synthia = "synthia.main:main"
synthia-dash = "synthia.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
