[package]
name = "synthia-gui"
version = "0.1.0"
description = "Synthia Voice Assistant GUI"
authors = ["Mark Middo"]
edition = "2021"

[lib]
name = "synthia_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "net"] }
image = "0.24"
regex = "1"

