[package]
name = "synthia-gui"
version = "0.1.0"
description = "Synthia Voice Assistant GUI"
authors = ["Mark Middo"]
edition = "2021"

[lib]
name = "synthia_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
image = "0.24"
regex = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
ipnet = "2"
dns-lookup = "2"
feed-rs = "2.3.1"

